[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.21"
gloo = "0.7.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["HtmlInputElement"] }
yew = "0.19.3"
yew-hooks = "0.1.54"
yew-router = "0.16.0"
yewdux = "0.7.0"

[profile.release]
lto = true
